# fastdevcli-slim

./: README.md  justfile  pyproject.toml
.github/workflows/: publish.yml
tests/: test_fast_version.py
