[project]
name = "fastdevcli-slim"
version = "0.22.0"
description = "Python Backend Development Toolkit"
authors = [
    {name = "Waket Zheng", email = "waketzheng@gmail.com"},
]
dependencies = [
    "fast-dev-cli>=0.21.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
