[project]
name = "fastdevcli-slim"
version = "0.22.1"
description = "Python Backend Development Toolkit"
authors = [
    {name = "Waket Zheng", email = "waketzheng@gmail.com"},
]
dependencies = [
    "fast-dev-cli>=0.22",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
fast = "fast_dev_cli.cli:main"
